kube/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-jupyter-dpl
  labels:
    app: devops-jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-jupyter
  template:
    metadata:
      labels:
        app: devops-jupyter
    spec:
      serviceAccount: devops-jupyter-svcacc
      automountServiceAccountToken: true
      containers:
      - name: devops-jupyter
        image: mdnmdn/devops-notebook:latest      
        ports:
        - containerPort: 8888
          name: jupyter-port
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"          
---
apiVersion: v1
kind: Service
metadata:
  name: devops-jupyter-svc
spec:
  selector:
    app: devops-jupyter
  ports:
    - protocol: TCP
      port: 8888
      targetPort: jupyter-port

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: devops-jupyter-ingr
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: devops-jupyter-svc
          servicePort: 8888
